<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信相册</string>
    <string name="video_share_app_name">WeChatPhoto</string>
    <string name="action_settings">Settings</string>
    <string name="server_err">服务器加载异常，请您稍后重试</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="retry">重试</string>
    <string name="net_disconnected">网络断开了，请您检查网络！</string>
    <string name="no_internet">无网络连接！</string>
    <string name="generic_server_down">连接服务器失败！</string>
    <string name="generic_error">网络异常，请稍后重试！</string>
    <!-- photo -->
    <string name="gridView_operation_guide">按【菜单】键删除</string>
    <string name="pager_operation_guide">按“左右”翻页，“上下”旋转</string>
    <!-- 投屏 -->
    <string name="wechat_photo">微信相册</string>
    <string name="gridView_touch_open">点击放大二维码</string>
    <string name="gridView_scan_QR">扫一扫上传您的图片</string>
    <string name="gridView_ok_delete">按  “OK” 键删除</string>
    <string name="gridView_not_data">当前没有数据</string>
    <string name="press_on">按住</string>
    <string name="press">按</string>
    <string name="menu">菜单</string>
    <string name="key_to_delete">键删除</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="could_rotate">可以旋转</string>
    <string name="could_paging_add_press_on">可以翻页&#160;&#160;&#160;&#160;按住 </string>
    <string name="reach_first_page">第一张了</string>
    <string name="reach_last_page">最后一张了</string>
    <string name="scan">扫一扫</string>
    <string name="watch_for_video_add_picture">影片、照片投屏看</string>
    <string name="wechat_start_network_error">网络中断,请检查网络</string>
    <string name="wechat_start_error">空间不足，请及时清理相册照片和电视里安装的应用</string>
    <string name="wechat_start_error_10MB">空间不足10MB，为了不影响正常使用，请及时清理相册照片和电视里安装的应用</string>

    <string name="has_new_version">发现新版本</string>
    <string name="upgrade_package_error">升级包异常，请重新下载</string>
</resources>
