<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/rl_bottom_mask"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_171"
        android:layout_alignParentBottom="true"
        android:background="@drawable/share_photo_page_bottom_mask"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/ll_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_84"
            android:layout_marginStart="@dimen/dimen_85"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/press_on"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/dimen_30"/>

            <TextView
                android:layout_width="@dimen/dimen_75"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginStart="@dimen/dimen_8"
                android:background="@drawable/bg_operation_txt"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/left"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/dimen_30"/>

            <TextView
                android:layout_width="@dimen/dimen_75"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/bg_operation_txt"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/right"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/dimen_30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginStart="@dimen/dimen_8"
                android:includeFontPadding="false"
                android:text="@string/could_paging_add_press_on"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/dimen_30"/>

            <TextView
                android:layout_width="@dimen/dimen_75"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/bg_operation_txt"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/up"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/dimen_30"/>

            <TextView
                android:layout_width="@dimen/dimen_75"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_marginStart="@dimen/dimen_8"
                android:background="@drawable/bg_operation_txt"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/down"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/dimen_30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/could_rotate"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/dimen_30"/>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_pager_currectNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_70"
        android:layout_toLeftOf="@+id/txt_pager_totalnumber"/>

    <TextView
        android:id="@+id/txt_pager_totalnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dimen_70"
        android:layout_marginRight="@dimen/dimen_30"/>

    <!-- <Button -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentBottom="true" -->
    <!-- android:layout_centerHorizontal="true" -->
    <!-- android:onClick="addTestData" -->
    <!-- android:text="添加测试数据" /> -->

</RelativeLayout>