<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false" >

    <TextView
        android:id="@+id/txt_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gridView_not_data"
        android:textSize="@dimen/px_45"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_wechatID"
        android:layout_toLeftOf="@+id/txt_totalnumber"
        android:text=""
        android:textColor="@color/fontColor"
        android:textSize="@dimen/px_30" />

    <TextView
        android:id="@+id/txt_totalnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txt_wechatID"
        android:layout_marginRight="@dimen/px_90"
        android:text=""
        android:textColor="@color/fontColor"
        android:textSize="@dimen/px_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_wechatID"
        android:layout_marginTop="@dimen/dimen_20px" >

        <com.cantv.wechatphoto.view.GridViewTV
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="@dimen/px_504"
            android:horizontalSpacing="@dimen/px_20"
            android:numColumns="auto_fit"
            android:paddingBottom="@dimen/px_135"
            android:paddingLeft="@dimen/px_175"
            android:paddingRight="@dimen/px_175"
            android:scrollbars="none" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_171px"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:background="@drawable/share_photo_page_bottom_mask" />

    <com.cantv.wechatphoto.view.PopView
        android:id="@+id/popView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_84px"
        android:layout_marginStart="@dimen/px_85"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/press"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/fontsize_30px" />

        <TextView
            android:layout_width="@dimen/dimen_75px"
            android:layout_height="@dimen/dimen_50px"
            android:layout_marginEnd="@dimen/dimen_8px"
            android:layout_marginStart="@dimen/dimen_8px"
            android:paddingStart="@dimen/dimen_2px"
            android:background="@drawable/bg_operation_txt"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/menu"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/fontsize_30px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/key_to_delete"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/fontsize_30px" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_wechatID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_90px"
        android:layout_marginTop="@dimen/px_85"
        android:text="@string/wechat_photo"
        android:textColor="@color/fontColor"
        android:textSize="@dimen/px_56" />

</RelativeLayout>